--- a/css/style.css
+++ b/css/style.css
@@ -163,6 +163,45 @@ table {
   width: 25%;
 }
 
+.media {
+  margin: 2rem 0;
+}
+.media .container .row .left .text-img {
+  margin-top: 2rem;
+}
+.media .container .row .left .images {
+  display: flex;
+  position: relative;
+}
+.media .container .row .left .images img {
+  height: 60%;
+  width: 40%;
+}
+.media .container .row .left .images .pic {
+  margin-top: 100px;
+}
+.media .container .row .left .images .pic img {
+  height: 100%;
+  width: 80%;
+}
+.media .container .row .right {
+  margin: 4rem 0;
+}
+.media .container .row .right .image-one img {
+  height: 60vh;
+  width: 100%;
+}
+.media .container .row .right .image-one img .text-three p {
+  padding-top: 5rem;
+}
+.media button {
+  background: darkviolet;
+  border: none;
+  color: white;
+  width: 8rem;
+  height: 2rem;
+}
+
 /*
 ####################################################
 M E D I A  Q U E R I E S
