--- a/css/style.scss
+++ b/css/style.scss
@@ -204,7 +204,7 @@ table {
 
             .right{
                 margin: 4rem 0;
-                .image-one{
+                .image-ryt{
                     img{
                         height: 60vh;
                         width: 100%;
