--- a/css/style.scss
+++ b/css/style.scss
@@ -101,6 +101,10 @@ table {
 		.text{
 			background: var(--primary-color);
 			color: var(--secondary-color);
+	h1{
+	
+		width: 80%;
+	}
 		}
 
 		.buttons{
@@ -171,11 +175,14 @@ table {
 		}
 	}
 }
-.media{
+.tigzozo-media{
     margin: 2rem 0;
     .container{
         .row{
             .left{
+			h2{
+			  color: black;
+			}
                 .text-img{
                     margin-top: 2rem;
                     
@@ -191,7 +198,7 @@ table {
                     }
                     
                     .pic{
-                        // position: absolute;
+                       
                         margin-top: 100px;
                        
                         img{
@@ -202,13 +209,13 @@ table {
                 }
             }
 
-            .right{
+            .right-side{
                 margin: 4rem 0;
                 .image-ryt{
                     img{
                         height: 60vh;
                         width: 100%;
-                .text-three{
+                .text-ryt{
                  p{
                     padding-top: 5rem;
                  }
@@ -218,15 +225,154 @@ table {
             }
         }
     }
-    button{
+  .left-btn1{
+	button{
         background: darkviolet;
         border: none;
         color: white;
+		font-weight: 700;
         width: 8rem;
         height: 2rem;
     }
 }
+  }
 
+
+.services{
+    .container{
+        .gallery{
+            gap: 2px;
+            display: flex;
+			justify-content: space-around;
+            .pics{
+                width: 40vh;
+                position: relative;
+                img{
+                    width: 100%;
+                    height: 70vh;
+                    object-fit: cover;
+                    object-position: top;
+                    
+                    
+                }
+                
+                .text-h3{
+                   position: absolute;
+                   top: 5px;
+                   background-color:transparent;
+                   align-items: center;
+                   h3{
+                    align-items: bottom;
+					background: transparent;
+                    text-align: center;
+                    color: white;
+                   }
+                    
+                }
+        }
+        // .card-one{
+		// 	.texting{
+		// 		background-color: #80228c;
+		// 		height: 70vh;
+		// 		color: black;
+		// 		color: transparent;
+				
+      
+        // }
+        // }
+    }
+}}
+
+.about-tig-media{ padding-top: 10vh;
+	             
+.container{	
+
+.row{ display: flex;
+	 
+.left{ padding-top: 10vh;
+	.left-img1{
+		  img{ width: 40vw;
+			height: 60vh;
+			
+		  }
+	}
+
+}	.right{ 
+	
+.ryt-img2{padding-top: 20px;
+		img{ 
+			width: 40vw;
+			height: 60vh;
+			
+
+		}
+	}
+}
+
+	}
+		
+	}
+
+
+}	
+	.gallery{
+
+		p{
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			font-weight: 700;
+		}
+		.pics{width: 100%;
+			display: flex;
+			align-items: center;
+			justify-content: space-around;
+		.down{
+			padding-top: 30vh;
+		}
+			
+		}
+		.txt-btn{
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			justify-content: center;
+
+	button{
+				background: #80228c;
+				border: none;
+				color: white;
+				width: 7vw;
+				height: 5vh;
+	  
+			 }
+	}
+}
+
+.footer{
+	margin-top: 4em;
+
+.footer-container{
+	// margin-top: 10vh;
+
+	*{
+		background-color: #80228c !important ;
+		color: white;
+	}
+
+   
+.row{  
+   background: #80228c;
+	
+
+
+
+}
+}
+
+		  
+
+}
 
 
 /*
@@ -322,6 +468,8 @@ No media query since this is the default in Bootstrap because it is "mobile firs
 	}
 }
 
+
+
 /* Large devices (desktops, 992px and up) */
 @media (min-width: 992px) { 
 	.pc-nav{
@@ -360,6 +508,7 @@ No media query since this is the default in Bootstrap because it is "mobile firs
 		}
 	}
 }
+
 
 /* Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {  
