--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,7 @@ table {
   align-items: center;
   padding: 0 0.8em;
 }
+
 .mobile-nav .hamburger {
   border: 2px solid #80228c;
   height: 50px;
@@ -81,6 +82,7 @@ table {
   justify-content: center;
   gap: 5px;
 }
+
 .mobile-nav .hamburger .line {
   background: rgb(128, 34, 140);
   height: 3px;
@@ -95,24 +97,29 @@ table {
   padding: 15px 0;
   background: var(--primary-color);
 }
+
 .banner .left {
   background: var(--primary-color);
   background: transparent;
   padding: 10px;
   gap: 100px;
 }
+
 .banner .left .text {
   background: var(--primary-color);
   color: var(--secondary-color);
 }
+
 .banner .left .text h1 {
   width: 80%;
 }
+
 .banner .left .buttons {
   display: flex;
   gap: 20px;
   margin: 2vh 0;
 }
+
 .banner .left .buttons .bttn-discover {
   background: rgb(128, 34, 140);
   padding: 5px 20px;
@@ -122,12 +129,14 @@ table {
   justify-content: center;
   width: 10rem;
 }
+
 .banner .left .buttons .bttn-discover a {
   background: none;
   color: var(--primary-color);
   text-decoration: none;
   font-size: 15px;
 }
+
 .banner .left .buttons .bttn-book {
   background: transparent;
   border: 3px solid rgb(128, 34, 140);
@@ -138,30 +147,37 @@ table {
   justify-content: center;
   width: 10rem;
 }
+
 .banner .left .buttons .bttn-book a {
   background: none;
   color: var(--secondary-color);
   text-decoration: none;
   font-size: 15px;
 }
+
 .banner .left .link {
   margin: 2vh 0;
 }
+
 .banner .left .link .text {
   background: transparent;
   gap: 10px;
 }
+
 .banner .left .link .text img {
   width: 25px;
   height: auto;
   background: none;
 }
+
 .banner .left .link .text p {
   background: none;
 }
+
 .banner .right {
   display: flex;
 }
+
 .banner .right img {
   width: 25%;
 }
@@ -169,37 +185,47 @@ table {
 .tigzozo-media {
   margin: 2rem 0;
 }
+
 .tigzozo-media .container .row .left h2 {
   color: black;
 }
+
 .tigzozo-media .container .row .left .text-img {
   margin-top: 2rem;
 }
+
 .tigzozo-media .container .row .left .images {
   display: flex;
   position: relative;
 }
+
 .tigzozo-media .container .row .left .images img {
   height: 60%;
   width: 40%;
 }
+
 .tigzozo-media .container .row .left .images .pic {
   margin-top: 100px;
 }
+
 .tigzozo-media .container .row .left .images .pic img {
-  height: 100%;
+  height: 60vh;
   width: 80%;
 }
+
 .tigzozo-media .container .row .right-side {
   margin: 4rem 0;
 }
+
 .tigzozo-media .container .row .right-side .image-ryt img {
   height: 60vh;
-  width: 100%;
+  width: 80%;
 }
+
 .tigzozo-media .container .row .right-side .image-ryt img .text-ryt p {
   padding-top: 5rem;
 }
+
 .tigzozo-media .left-btn1 button {
   background: darkviolet;
   border: none;
@@ -209,79 +235,63 @@ table {
   height: 2rem;
 }
 
-.services .container .gallery {
-  gap: 2px;
-  display: flex;
-  justify-content: space-around;
-}
-.services .container .gallery .pics {
-  width: 40vh;
-  position: relative;
-}
-.services .container .gallery .pics img {
+.services {
+  padding-bottom: 10vh;
   width: 100%;
-  height: 70vh;
-  -o-object-fit: cover;
-     object-fit: cover;
-  -o-object-position: top;
-     object-position: top;
 }
-.services .container .gallery .pics .text-h3 {
-  position: absolute;
-  top: 5px;
-  background-color: transparent;
-  align-items: center;
-}
-.services .container .gallery .pics .text-h3 h3 {
-  align-items: bottom;
-  background: transparent;
-  text-align: center;
-  color: white;
-}
-
-.about-tig-media {
-  padding-top: 10vh;
-}
-.about-tig-media .container .row {
+.services .container .three-cards {
   display: flex;
+  width: 100%;
+  color: white;
+  align-items: center;
+  text-align: center;
+  justify-content: space-evenly;
+  gap: 5px;
 }
-.about-tig-media .container .row .left {
-  padding-top: 10vh;
+.services .container .three-cards .card2 * {
+  background-color: #80228c;
 }
-.about-tig-media .container .row .left .left-img1 img {
-  width: 40vw;
-  height: 60vh;
+.services .container .three-cards .card2 * .digital-card {
+  height: 70vh;
+  width: 30vw;
 }
-.about-tig-media .container .row .right .ryt-img2 {
-  padding-top: 20px;
+.services .container .three-cards img {
+  height: 55vh;
+  width: 60%;
 }
-.about-tig-media .container .row .right .ryt-img2 img {
-  width: 40vw;
-  height: 60vh;
+.services .container .two img {
+  height: 55vh;
+  width: 60%;
 }
 
 .gallery p {
   display: flex;
   align-items: center;
   justify-content: center;
+  font-size: larger;
   font-weight: 700;
 }
-.gallery .pics {
+
+.pics {
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
+  gap: 15px;
 }
-.gallery .pics .down {
+
+.down {
   padding-top: 30vh;
 }
-.gallery .txt-btn {
+
+.txt-btn {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
-.gallery .txt-btn button {
+
+.txt-btn button {
   background: #80228c;
   border: none;
   color: white;
@@ -290,14 +300,26 @@ table {
 }
 
 .footer {
+  width: 100%;
   margin-top: 4em;
 }
+
 .footer .footer-container * {
   background-color: #80228c !important;
   color: white;
 }
+
 .footer .footer-container .row {
   background: #80228c;
+}
+
+.footer .footer-container .row h4 {
+  text-decoration: underline;
+}
+
+.footer .footer-container .row .icons {
+  display: flex;
+  gap: 1em;
 }
 
 /*
@@ -319,54 +341,65 @@ No media query since this is the default in Bootstrap because it is "mobile firs
   .mobile-nav {
     display: none;
   }
-  .pc-nav {
-    display: block;
-  }
-  .pc-nav .flex-container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  .pc-nav .flex-container ul {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
-    font-weight: 600;
-    margin-right: -30rem;
-  }
-  .pc-nav .flex-container ul li {
-    color: var(--secondary-color);
-    font-size: 20px;
-  }
-  .pc-nav .flex-container ul li span {
-    color: rgb(128, 34, 140);
-  }
-  .pc-nav .flex-container ul .dark-icon {
-    height: 30px;
-    width: 30px;
-    background: var(--secondary-color);
-    border-radius: 50%;
-  }
-  .pc-nav .flex-container img {
-    width: 50px;
-    height: 50px;
-  }
-  .banner .left .link .text {
-    display: flex;
-    align-items: center;
-  }
-  .banner .right {
-    display: flex;
-    gap: 5px;
-  }
-  .banner .right img {
-    height: 30vh;
-  }
-  .banner .right .image1 {
-    margin-top: 7vh;
-  }
 }
+.pc-nav {
+  display: block;
+}
+
+.pc-nav .flex-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.pc-nav .flex-container ul {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  font-weight: 600;
+  margin-right: -30rem;
+}
+
+.pc-nav .flex-container ul li {
+  color: var(--secondary-color);
+  font-size: 20px;
+}
+
+.pc-nav .flex-container ul li span {
+  color: rgb(128, 34, 140);
+}
+
+.pc-nav .flex-container ul .dark-icon {
+  height: 30px;
+  width: 30px;
+  background: var(--secondary-color);
+  border-radius: 50%;
+}
+
+.pc-nav .flex-container img {
+  width: 50px;
+  height: 50px;
+}
+
+.banner .left .link .text {
+  display: flex;
+  align-items: center;
+}
+
+.banner .right {
+  display: flex;
+  gap: 5px;
+}
+
+.banner .right img {
+  height: 30vh;
+}
+
+.banner .right .image1 {
+  margin-top: 7vh;
+}
+
 /* Large devices (desktops, 992px and up) */
 @media (min-width: 992px) {
   .pc-nav .flex-container ul {
@@ -402,4 +435,4 @@ No media query since this is the default in Bootstrap because it is "mobile firs
 ::::::::::::::::::::::::::::::::::::::::::::::::::::
 Custom media queries
 */
-/* Set width to make card deck cards 100% width *//*# sourceMappingURL=style.css.map */
+/* Set width to make card deck cards 100% width */ /*# sourceMappingURL=style.css.map */
